--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,17 @@ jobs:
       with:
         python-version: '3.7'
 
+    - name: Install sphinx toolset
+      run: >-
+        python -m
+        pip install
+        sphinx
+        sphinx-argparse
+        --user
+
+    - name: Generate the manpage
+      run: (cd docs && make man)
+
     - name: Install pep517
       run: >-
         python -m
