--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,14 @@ jobs:
         sphinx-argparse
         --user
 
+    - name: Install tldr dependencies
+      run: >-
+        python -m
+        pip install
+        -r
+        requirements.txt
+        --user
+
     - name: Generate the manpage
       run: (cd docs && make man)
 
